scss/pages/_pricing.scss
.pricing-hero {
  padding-bottom: 34%;
  .pricing-hero-img {
    background: url("../../assets/pricing/desktop/hero.jpg");
    background-size: cover;
  }
  @media (max-width: 1150px) {
    padding-bottom: 59%;
    .pricing-hero-img {
      background: url("../../assets/pricing/tablet/hero.jpg");
      background-size: cover;
    }
  }
  @media (max-width: 700px) {
    padding-bottom: 0;
    .pricing-hero-img {
      background: url("../../assets/pricing/mobile/hero.jpg");
      background-size: cover;
      background-position: bottom center;
      left: 0;
      right: 0;
      height: 32rem;
    }
  }
}

.prices {
  margin-top: 7.75rem;
  margin-bottom: 10rem;
  .wrapper {
    margin: 0 auto;
    .toggle-container {
      font-weight: bold;
      letter-spacing: 0;
      font-size: 1.125rem;
      color: $gray;
      display: flex;
      align-items: center;
      justify-content: center;
      margin-bottom: 3rem;
      .toggle {
        height: 2rem;
        width: 4rem;
        border-radius: 4rem;
        background-color: $light-gray;
        margin: 0 2.25rem;
        position: relative;
        transition: 0.25s background-color ease-out;
        .circle {
          height: 1.5rem;
          width: 1.5rem;
          border-radius: 1.5rem;
          position: absolute;
          top: 50%;
          transform: translateY(-50%);
          background-color: black;
          left: 0.25rem;
          transition: 0.25s background-color ease-out;
          &.monthly {
            left: 0.25rem;
            right: auto;
          }
          &.yearly {
            left: auto;
            right: 0.25rem;
          }
        }
        &:hover {
          cursor: pointer;
          background-color: black;
          .circle {
            background-color: white;
          }
        }
      }
      p.active {
        color: black;
      }
    }
  }
}

.pricing-cards {
  display: flex;
  margin: 0 auto;
  justify-content: center;
  align-items: center;
  padding: 0 2rem;
  .card {
    width: 21.875rem;
    height: 25.4375rem;
    background-color: #f5f5f5;
    padding: 2.5rem;
    text-align: center;
    color: #868686;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    h2 {
      font-weight: bold;
      margin-bottom: 1.25rem;
      color: black;
      margin-bottom: 0;
    }
    button {
      width: 100%;
    }
    .btn--tablet {
      display: none;
    }
    &__desc {
      h2 {
        margin-bottom: 1.25rem;
      }
    }
    &.pro {
      background-color: black;
      color: white;
      margin: 0 2rem;
      border-top: 0.375rem solid transparent;
      border-image: $main-accent-r;
      border-image-slice: 1;
      height: 29.4375rem;
      padding: 4rem 2.5rem;
      color: #999;
      h2 {
        color: white;
      }
    }
  }
  @media (max-width: 1100px) {
    flex-direction: column;
    .card {
      width: 100%;
      height: 16.875rem;
      flex-direction: row;
      padding: 2.625rem;
      .btn--main {
        display: none;
      }
      .btn--tablet {
        display: block;
      }
      &__desc {
        max-width: 16.875rem;
        text-align: left;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
      }
      &__price {
        text-align: right;
      }
      &.pro {
        border-top: none;
        border-left: 0.375rem solid transparent;
        border-image: $main-accent;
        border-image-slice: 1;
        height: 16.875rem;
        padding: 2.625rem;
      }
    }
  }
  @media (max-width: 630px) {
    .card,
    .card.pro {
      flex-direction: column;
      align-items: center;
      height: 25.4375rem;
      > * {
        text-align: center;
      }
      .btn--tablet {
        display: none;
      }
      .btn--main {
        display: block;
      }
    }
    .card.pro {
      border-top: 0.375rem solid transparent;
      border-left: none;
      border-image: $main-accent-r;
      border-image-slice: 1;
      margin: 1.5rem 0;
    }
  }
}

